# geni_ai_1

./: pyproject.toml  requirements.txt
ChatModels/: chat.py  chatBot_with_UI.py  chat_bot.py  huggingface_chat.py  localModel.py
EmbeddingModels/: embeddings.py  huggingface.py
