[project]
name = "gen-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.11",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "tokenizers<=0.23.0",
    "torch>=2.12.1",
]
